--- a/components/sensor_manager/Kconfig
+++ b/components/sensor_manager/Kconfig
@@ -2,11 +2,13 @@ menu "Sensor Manager"
 
 config SENSOR_MANAGER_PUBLISH_INTERVAL_MS
     int "Sensor telemetry publish interval (ms)"
-    default 10000
+    default 2000
     range 1000 600000
     help
         Interval at which the sensor manager aggregates registered sensor readings
-        and publishes a telemetry payload via MQTT.
+        and publishes a telemetry payload via MQTT for app monitoring.
+        Default is 2000ms (2 seconds) for responsive app updates.
+        Minimum: 1000ms (1 second), Maximum: 600000ms (10 minutes).
 
 endmenu
 
