--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,7 @@
 idf_component_register(
-    SRCS "main.c"
+    SRCS 
+        "main.c"
+        "audio_init_test.c"
     INCLUDE_DIRS "."
-    PRIV_REQUIRES driver nvs_flash esp_wifi esp_netif
+    PRIV_REQUIRES driver nvs_flash esp_wifi esp_netif vfs spiffs helix_mp3 esp_timer
 )
