Fix GitHub Pages URL in _config.yml
- Change URL from naphome.github.io to naptick.github.io (correct owner)
- Update flasher README with correct URL
- Correct URL: https://naptick.github.io/Naphome_Firmware/firmware-flasher.html

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -41,5 +41,5 @@ plugins:
 # Update baseurl to match your repository name
 # If repo is "Naphome_Firmware", baseurl should be "/Naphome_Firmware"
 # If repo is "Naphome-Firmware", baseurl should be "/Naphome-Firmware"
-url: "https://naphome.github.io"
+url: "https://naptick.github.io"
 baseurl: "/Naphome_Firmware"  # Repository name from GitHub
