Fix main initialization and memory management
- Switch to main.c with BLE initialization
- Add memory management improvements for HTTP server
- Start BLE service on boot
- Includes memory consolidation and better error handling

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,5 +3,5 @@ idf_component_register(
         "main.c"
         "audio_init_test.c"
     INCLUDE_DIRS "."
-    PRIV_REQUIRES driver nvs_flash esp_wifi esp_netif vfs spiffs helix_mp3 esp_timer
+    PRIV_REQUIRES driver nvs_flash esp_wifi esp_netif vfs spiffs helix_mp3 esp_timer somnus_ble
 )
