--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,7 +1,19 @@
 idf_component_register(
-    SRCS 
+    SRCS
         "main.c"
-        "audio_init_test.c"
     INCLUDE_DIRS "."
-    PRIV_REQUIRES driver nvs_flash esp_wifi esp_netif vfs spiffs helix_mp3 esp_timer somnus_ble
+    PRIV_REQUIRES
+        driver
+        nvs_flash
+        esp_wifi
+        esp_netif
+        vfs
+        spiffs
+        esp_timer
+        somnus_ble
+        wifi_manager
+        naptick_config
+        naptick_http
+        naptick_mqtt
+        naptick_uart
 )
